--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+   "homepage": "https://VincentFR7.github.io/status-nexus"
+
   },
   "dependencies": {
     "react": "^18.2.0",
