--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,8 +8,6 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-   "homepage": "https://VincentFR7.github.io/status-nexus"
-
   },
   "dependencies": {
     "react": "^18.2.0",
